[project]
name = "referral-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "black>=25.1.0",
    "fastapi>=0.116.2",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.9",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]
